hpo/force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <description>Benefits given to donors</description>
    <label>Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>