hpo/force-app/main/default/objects/Benefit__c/fields/BenefitDetails__c.field-meta.xml
<CustomField>
    <fullName>BenefitDetails__c</fullName>
    <description>Donor preferences for recognition-type benefits</description>
    <label>Benefit Details</label>
    <type>TextArea</type>
</CustomField>