hpo/force-app/main/default/objects/Benefit__c/fields/DollarAmount__c.field-meta.xml
<CustomField>
    <fullName>DollarAmount__c</fullName>
    <label>Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>