hpo/force-app/main/default/objects/Benefit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gala Ticket</fullName>
            </value>
            <value>
                <fullName>Annual Report Recognition</fullName>
            </value>
            <value>
                <fullName>Tribute Wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>